fix spacing and bnilifeLogo

--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -1,7 +1,7 @@
 .projectCardContainer {
   display: flex;
   justify-content: center;
-  gap: 12px;
+  gap: 25px;
   margin-top: 25px;
   position: relative;
   flex-wrap: wrap;
